tests/ui/suggestions/issue-109195.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:2:5
   |
LL |     String::from::utf8;
   |     ^^^^^^^^^^^^
   |
help: you might have meant to use `from_utf8`
   |
LL |     String::from_utf8;
   |             ~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:5:5
   |
LL |     String::from::utf8();
   |     ^^^^^^^^^^^^
   |
help: you might have meant to use `from_utf8`
   |
LL |     String::from_utf8();
   |             ~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:8:5
   |
LL |     String::from::utf16();
   |     ^^^^^^^^^^^^
   |
help: you might have meant to use `from_utf16`
   |
LL |     String::from_utf16();
   |             ~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:11:5
   |
LL |     String::from::method_that_doesnt_exist();
   |     ^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `from` implemented for `String`, you could use the fully-qualified path
   |
LL |     <String as Example>::from::method_that_doesnt_exist();
   |     ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:14:5
   |
LL |     str::from::utf8();
   |     ^^^^^^^^^
   |
help: you might have meant to use `from_utf8`
   |
LL |     str::from_utf8();
   |          ~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:17:5
   |
LL |     str::from::utf8_mut();
   |     ^^^^^^^^^
   |
help: you might have meant to use `from_utf8_mut`
   |
LL |     str::from_utf8_mut();
   |          ~~~~~~~~~~~~~

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0223`.
